# codex-turn-chime

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  platform-compatibility.yml  status-detection.yml
.github/workflows/: ci.yml  codeql.yml  format-rust.yml  release.yml
docs/: README.md  architecture.md  architecture.zh-CN.md  feasibility-analysis.zh-CN.md  hooks.md  hooks.zh-CN.md  privacy.md  privacy.zh-CN.md  project-plan.zh-CN.md  releasing.md  security-model.md  testing.md  troubleshooting.md  troubleshooting.zh-CN.md  voice-prompt-catalog.md
scripts/: build_macos_arm.sh  build_windows_x64.ps1  debug.sh  init_env.sh  stage-sidecar.mjs
src/: App.tsx  bridge.ts  i18n.tsx  reminder.test.ts  reminder.ts  shortcut.test.ts  shortcut.ts  sounds.test.ts  sounds.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  hook_helper.rs  hooks.rs  lib.rs  main.rs  paths.rs  persistence.rs  queue.rs  settings.rs  shortcuts.rs  watcher.rs
src-tauri/src/monitor/: mod.rs  model.rs  reducer.rs
src/components/: BrandMark.tsx  DiagnosticsView.tsx  Onboarding.tsx  SettingsView.tsx  ShortcutRecorder.test.tsx  Sidebar.tsx  (+5 more)
(+4 files in other folders)
